Google-chrome/Chromium material theme

--- a/.themes/Fleon/gtk-3.0/gtk.css
+++ b/.themes/Fleon/gtk-3.0/gtk.css
@@ -4743,7 +4743,7 @@ window.background > box.vertical > scrolledwindow > widget toolbar button {
  * Chromium *
  ************/
 window.background.chromium {
-  background-color: #3B4252;
+  background-color: #4C566A;
 }
 
 window.background.chromium entry,
